--- a/stylesheet.css
+++ b/stylesheet.css
@@ -122,10 +122,25 @@ h2 {
   font-size: 32px;
 }
 
+/*.colone {width:35%;overflow:scroll}*/
+.colone {width:35%;overflow:hidden;min-width:200px}
+.coltwo {width:65%}
+
+.colleft {padding-left:20px;padding-bottom:20px;padding-top:20px;vertical-align:middle;overflow:hidden;}
+.colright {padding:20px;vertical-align:middle}
+
 .one {
 /*  width: 160px; */
 /*  height: 160px;*/
-  position: relative;
+/*  position: relative;*/
+  max-width: 100%;
+  width: 100%;
+/*  overflow:scroll;*/
+}
+.one img {
+  display: inline-block;
+  object-fit: contain;
+  width: 100%;
 }
 
 .two {
